# 3dGraphics

./: .gitignore  CMakeLists.txt  README.md  Render.cpp  RenderConfig.h  RenderConfig.h.in  main.cpp
libs/: CMakeLists.txt  model.h
libs/formats/: CMakeLists.txt
libs/formats/src/: tgaimage.cpp
libs/model/: CMakeLists.txt
